--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 	<head>
 		<title>Мой второй сайт</title>
 		<meta charset = "utf-8">
+		<link href="style.css" rel="stylesheet" type="text/css">
+
 	</head>
 	<body>
 		<h1> Я буду постить здесь любимые мемы)</h1>
