--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 		<p>Надеюсь, вам понравится.
 			<br><em>Можно начинать?</em>
 		</p>
-		<a href = "https://youtu.be/ci3Mc_qgbFk" target="_blank">
+		<a class="link blockEl" href = "https://youtu.be/ci3Mc_qgbFk" target="_blank">
 			Мы же все сейчас на карантине! Что ж, будьте более бдительны!
 		</a>
+		<iframe class="blockEl" width="560" height="315" src="https://www.youtube.com/embed/ci3Mc_qgbFk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		<p><h2>Все студенты выглядели в прошлую среду именно так :</h2>
 		<video width="400" height="300" controls>
 		<source src="Coronavirus.MP4" type="video/mp4">
