--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
 	    </p>
 		<p> А теперь, хорошо поработав, можно и ...</p>
 		<img src = "pevco.jpg">
+		<p> ИДИТЕ УЧИТЬ УРОКИ!!!!!!!!!</p>
 	</body>
 </html>
