--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
 	    </p>
 		<p> А теперь, хорошо поработав, можно и ...</p>
 		<img src = "pevco.jpg">
-		<p> ИДИТЕ УЧИТЬ УРОКИ!!!!!!!!!</p>
+		<p> ИДИТЕ УЧИТЬ УРОКИ!!!!!</p>
 	</body>
 </html>
